# glimpse

./: CONTRIBUTIONS  ChangeLog  LICENSE  Makefile.alpha  Makefile.in  Makefile.org  Makefile.rs6000  README  README.install  README.md  defs.h  genpatch  gentar  get_filename.c  glimpse.1  glimpse.chronicle  glimpseindex.1  main.c  mkinstalldirs
agrep/: README
compress/: Makefile.alpha  Makefile.in  Makefile.sunos  README  compress.chronicle  defs.h  hash.c  misc.c  string.c  tmemlook.c  trecursive.c  uncast.c
dynfilters/: Makefile.in  README  sotest.c
glimpse/: CHANGES  COPYRIGHT  ChangeLog  KNOWN_BUGS  Makefile.NeXT  Makefile.hp  Makefile.linux  Makefile.sgi  Makefile.solaris  Makefile.sunos  README  README.install  communicate.c  configure  configure.in  get_index.c  glimpseserver.1  split.c
glimpse/compress/: Makefile.NeXT  Makefile.hp  Makefile.linux  Makefile.rs6000  Makefile.solaris  cast.c  main_cast.c  main_tbuild.c  main_uncast.c  quick.c  tbuild.c  test.c  tsimpletest.c
glimpse/dynfilters/: Makefile.linux  htuml2txt.lex
glimpse/index/: Makefile.alpha  Makefile.in  Makefile.rs6000  Makefile.sgi  Makefile.solaris  Makefile.sunos  README  filetype.c  fixname.c  getword.c  glimpse.h  lib.c  partition.c  region.c  region.h
glimpse/libtemplate/: Makefile.alpha  Makefile.hp  Makefile.sgi  Makefile.solaris  Makefile.sunos
glimpse/libtemplate/include/: autoconf.h  autoconf.h.in  ccache_list.h  ccache_queue.h  template.h  url.h  util.h
glimpse/libtemplate/lib/: Makefile.in
glimpse/libtemplate/template/: Attributes.html  Makefile.NeXT  Makefile.solaris  lsm2soif.c  pcindex2soif.c  print-attr.c  print-urlrefs.c  soif.pl  translate-urls.c
glimpse/libtemplate/util/: Makefile.hp  Makefile.in  Makefile.linux  README  harvest.c  log.c  strdup.c  strerror.c  string.c
glimpse/test/: check.sh
index/: Makefile.NeXT  Makefile.hp  Makefile.in  Makefile.linux  build_in.c  convert.c  dir.c  filetype.c  glimpse.c  glimpse.h  index.chronicle  io.c  memlook.c  simpletest.c  utils.c
libtemplate/: Makefile.NeXT  Makefile.in  Makefile.linux  Makefile.rs6000  README
libtemplate/include/: autoconf.h  ccache.h  ccache_list.h  ccache_queue.h  config.h  paths.h  paths.h.in  template.h  time_it.h  url.h  util.h
libtemplate/lib/: Makefile.sunos
libtemplate/template/: Makefile.alpha  Makefile.hp  Makefile.in  Makefile.linux  Makefile.rs6000  Makefile.sgi  Makefile.sunos  README  cksoif.c  iafa2soif.c  lsm2soif.c  netfind2soif.pl  pcindex2soif.c  print-attr.c  print-template.c  print-urlrefs.c  soif.pl  template.c  translate-urls.c
libtemplate/util/: Makefile.NeXT  Makefile.alpha  Makefile.rs6000  Makefile.sgi  Makefile.solaris  Makefile.sunos  buffer.c  harvest.c  host.c  log.c  strdup.c  strerror.c  string.c  system.c  xmalloc.c
test/: test.txt
